# AoC

./: .gitignore  Cargo.toml  bacon.toml
aoc/: Cargo.toml
aoc/src/: measure.rs  reader.rs  runner.rs  search.rs
aoc2021/: Cargo.toml
aoc2021/src/: aoc202101.rs  aoc202102.rs  aoc202103.rs  aoc202104.rs  aoc202105.rs  aoc202106.rs  aoc202107.rs  aoc202108.rs  aoc202109.rs  aoc202110.rs  aoc202111.rs  aoc202112.rs  aoc202113.rs  aoc202114.rs  aoc202115.rs  aoc202116.rs  aoc202117.rs  aoc202118.rs  aoc202119.rs  aoc202120.rs  aoc202121.rs  aoc202122.rs  aoc202123.rs  aoc202124.rs  aoc202125.rs  main.rs
aoc2022/: Cargo.toml  cargo.toml
aoc2022/src/: aoc202201.rs  aoc202202.rs  aoc202203.rs  aoc202204.rs  aoc202205.rs  aoc202206.rs  aoc202207.rs  aoc202208.rs  aoc202209.rs  aoc202210.rs  aoc202211.rs  aoc202212.rs  aoc202213.rs  aoc202214.rs  aoc202215.rs  aoc202216.rs  aoc202217.rs  aoc202218.rs  aoc202219.rs  aoc202220.rs  aoc202221.rs  aoc202222.rs  aoc202223.rs  aoc202224.rs  aoc202225.rs  main.rs
aoc2023/: Cargo.toml  bacon.toml
aoc2023/src/: aoc202301.rs  aoc202302.rs  aoc202303.rs  aoc202304.rs  aoc202305.rs  aoc202306.rs  aoc202307.rs  aoc202308.rs  aoc202309.rs  aoc202310.rs  aoc202311.rs  aoc202312.rs  aoc202313.rs  aoc202314.rs  aoc202315.rs  aoc202316.rs  aoc202317.rs  aoc202318.rs  aoc202319.rs  aoc202320.rs  aoc202321.rs  aoc202322.rs  aoc202323.rs  aoc202324.rs  aoc202325.rs  main.rs
aoc2024/: Cargo.toml  bacon.toml  cargo.toml
aoc2024/src/: aoc202401.rs  aoc202402.rs  main.rs  (+23 more)
aoc2025/: Cargo.toml
src/: lib.rs  main.rs  runner.rs  search.rs
(+2 files in other folders)
