[workspace]
resolver = "3"
members = ["aoc","aoc2021", "aoc2022", "aoc2023", "aoc2024", "aoc2025"]

[workspace.dependencies]
puzlib = { git = "https://github.com/MrRobotMan/puzlib", version = "0.1.0" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

