[package]
name = "aoc2025"
version = "0.1.0"
edition = "2024"

[dependencies]
aoc = { version = "0.1.0", path = "../aoc" }
puzlib = { git = "https://github.com/MrRobotMan/puzlib", version = "0.1.0" }

[[bin]]
name = "aoc202501"

[[bin]]
name = "aoc202502"

[[bin]]
name = "aoc202503"

[[bin]]
name = "aoc202504"

[[bin]]
name = "aoc202505"

[[bin]]
name = "aoc202506"

[[bin]]
name = "aoc202507"

[[bin]]
name = "aoc202508"

[[bin]]
name = "aoc202509"

[[bin]]
name = "aoc202510"

[[bin]]
name = "aoc202511"
